--- a/cos_c_sdk_test/CMakeLists.txt
+++ b/cos_c_sdk_test/CMakeLists.txt
@@ -11,6 +11,10 @@ set(delete_object_demo_src cos_object_demo/delete_object_demo.c)
 set(get_object_url_demo_src cos_object_demo/get_object_url_demo.c)
 set(restore_object_demo_src cos_object_demo/restore_object_demo.c)
 set(head_object_demo_src cos_object_demo/head_object_demo.c)
+set(delete_bucket_demo_src cos_bucket_demo/delete_bucket_demo.c)
+set(get_bucket_list_demo_src cos_bucket_demo/get_bucket_list_demo.c)
+set(head_bucket_demo_src cos_bucket_demo/head_bucket_demo.c)
+set(put_bucket_demo_src cos_bucket_demo/put_bucket_demo.c)
 
 # find_path(APR_INCLUDE_DIR apr-1/apr_time.h)
 # find_path(APR_UTIL_INCLUDE_DIR apr/include/apr-1/apr_md5.h)
@@ -37,6 +41,10 @@ add_executable(delete_object_demo ${delete_object_demo_src})
 add_executable(get_object_url_demo ${get_object_url_demo_src})
 add_executable(restore_object_demo ${restore_object_demo_src})
 add_executable(head_object_demo ${head_object_demo_src})
+add_executable(delete_bucket_demo ${delete_bucket_demo_src})
+add_executable(get_bucket_list_demo ${get_bucket_list_demo_src})
+add_executable(head_bucket_demo ${head_bucket_demo_src})
+add_executable(put_bucket_demo ${put_bucket_demo_src})
 
 target_link_libraries(cos_c_sdk_test cos_c_sdk)
 target_link_libraries(cos_c_sdk_test ${APR_UTIL_LIBRARY})
@@ -51,4 +59,8 @@ target_link_libraries(delete_object_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIB
 target_link_libraries(get_object_url_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
 target_link_libraries(restore_object_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
 target_link_libraries(head_object_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
+target_link_libraries(delete_bucket_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
+target_link_libraries(get_bucket_list_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
+target_link_libraries(head_bucket_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
+target_link_libraries(put_bucket_demo cos_c_sdk ${APR_UTIL_LIBRARY} ${APR_LIBRARY} ${MINIXML_LIBRARY} ${CURL_LIBRARY})
 
